non_executable_reasons_record/196.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash
### å¤‰æ•°ã®è¨­å®š
name=PersonTest

### ã‚½ãƒ¼ã‚¹ã®ç·¨é›†
cat <<- EOS > ${name}.java

class Person {
  //# ãƒ•ã‚£ãƒ¼ãƒ«ãƒ‰ï¼ˆå¤‰æ•°ï¼‰ã®å®šç¾©
  String name;
  int age;
  String address;
  
  //# ã‚³ãƒ³ã‚¯ãƒ©ã‚¹ã‚¿ã®å®šç¾©ã€‚ä»®å¼•æ•°ã¨ãƒ•ã‚£ãƒ¼ãƒ«ãƒ‰åã‚’åŒºåˆ¥ã™ã‚‹ãŸã‚ã«ä»®å¼•æ•°ã«ã¯ã‚¢ãƒ³ãƒ€ãƒ¼ã‚¹ã‚³ã‚¢ã‚’ã¤ã‘ã¦ã„ã‚‹
  Person(String _name, int _age, String _address){
    name = _name;
    age = _age;
    address = _address;
  }
}

public class ${name} {
  public static void main (String[] args) {

    //# newæ¼”ç®—ã—ã¦ã‚¤ãƒ³ã‚¹ã‚¿ãƒ³ã‚¹ã‚’ç”Ÿæˆã€‚é ­ã®Personã¯ã‚¯ãƒ©ã‚¹åã€‚newã®å¾Œã‚ã¯ã‚³ãƒ³ã‚¹ãƒˆãƒ©ã‚¯ã‚¿
    Person taro = new Person("Taro", 21, "Tokyo");
    System.out.println("Name:" + taro.name + " Age:" + taro.age + " Address:" + taro.address);

    Person hanako = new Person("Hanako", 18, "Hokkaido");
    System.out.println("Name:" + taro.name + " Age:" + taro.age + " Address:" + taro.address);

  }
}
EOS

### ã‚³ãƒ³ãƒ‘ã‚¤ãƒ«
#javac ${name}.java
### ã‚³ãƒ¡ãƒ³ãƒˆã‚¢ã‚¦ãƒˆã™ã‚‰æ–‡å­—åŒ–ã‘ã™ã‚‹ã®ã§ã‚¨ãƒ³ã‚³ãƒ¼ãƒ‡ã‚£ãƒ³ã‚°ã‚’æŒ‡å®š
javac -encoding UTF-8 ${name}.java

### å®Ÿè¡Œ
java ${name}
------------------

[0;36m  File [0;32m"<ipython-input-1-91ba778625ee>"[0;36m, line [0;32m8[0m
[0;31m    cat <<- EOS > ${name}.java[0m
[0m                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-91ba778625ee>, line 8)

Executability                            : False
